added some monster resources, and rendered that instead of the default logo; put it at static spot and resized

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,9 @@
 	<profiles>
 		<profile>
 			<id>desktop</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
 			<modules>
 				<module>desktop</module>
 			</modules>
